# website

./: README.md  example.env  pyproject.toml
app/: main.py
app/api/: router.py
app/api/endpoints/: info.py
app/core/: config.py
